--- a/state/risk_config.json
+++ b/state/risk_config.json
@@ -17,6 +17,12 @@
       "risk_pct": 0.01,
       "min_units": 0.1,
       "units_step": 0.1
+    },
+    "XAU_M5_SCALP": {
+      "equity": 6000,
+      "risk_pct": 0.01,
+      "min_units": 0.1,
+      "units_step": 0.1
     }
   },
   "gold_cfd": {
