--- a/state/risk_config.json
+++ b/state/risk_config.json
@@ -1,31 +1,8 @@
 {
   "accounts": {
-    "COINM_SHORT": {
-      "equity": 6000,
-      "risk_pct": 0.01,
-      "min_qty": 0.001,
-      "qty_step": 0.001
-    },
-    "USDTM_LONG": {
-      "equity": 6000,
-      "risk_pct": 0.01,
-      "min_qty": 0.001,
-      "qty_step": 0.001
-    },
-    "GOLD_CFD_LONG": {
-      "equity": 1500,
-      "risk_pct": 0.01,
-      "min_units": 0.1,
-      "units_step": 0.1
-    },
-    "XAU_M5_SCALP": {
-      "equity": 6000,
-      "risk_pct": 0.01,
-      "min_units": 0.1,
-      "units_step": 0.1
+    "TV_TEST": {
+      "equity_usd": 10000,
+      "risk_pct": 0.01
     }
-  },
-  "gold_cfd": {
-    "units_are_oz": true
   }
 }
