--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ tqdm==4.67.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
+fastapi==0.129.0
+uvicorn[standard]==0.41.0
+python-dotenv==1.2.1
